--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,9 @@ spring.jpa.properties.hibernate.show_sql=true
 # ===== Liquibase ======
 #liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xm
 spring.liquibase.enabled=false
-spring.liquibase.url=jdbc:postgresql://localhost:5432/puzzle_ute
-spring.liquibase.user=postgres
-spring.liquibase.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
+#spring.liquibase.url=jdbc:postgresql://localhost:5432/puzzle_ute
+#spring.liquibase.user=postgres
+#spring.liquibase.password=ENC(EonbnGeN05aybm2uSlRrjnscL5OCzSix)
 
 spring.liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xml
 #spring.liquibase.contexts=
@@ -204,7 +204,7 @@ management.endpoints.web.exposure.include=*
 ##spring.config.import=optional:/conf/
 
 # -Dspring.profiles.active=local
-spring-boot.run.jvmArguments=-Xmx2g -Duser.timezone=Asia/Ho_Chi_Minh
+spring-boot.run.jvmArguments=-Xmx400m -Duser.timezone=Asia/Ho_Chi_Minh
 cronjob.xyz = 0 0/30 * * * ?
 cronjob.service = 0 0/20 * * * ?
 cronjob.batch.enable=false
