--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.metadata_builder_contributor=com.example.demo.fts.SqlFunctionsMetadataBuilderContributor
 
 # ===== Liquibase ======
 #liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xm
@@ -259,7 +260,7 @@ hirize.endpoint.resume_parser=/api/public/parser
 hirize.endpoint.job_parser=/api/public/job-parser
 hirize.endpoint.ai_matcher=/api/public/ai-matcher
 hirize.endpoint.hirize_iq=/api/public/hirize-iq
-
+hirize.pricing.coin=5
 
 ### ======================================
 ###               COHERE
